@@ -137,7 +137,7 @@ different game cutscenes repacked for use with ScummVM.
 @tab Audio and video format used in some games by Entertainment Software Partners
 @item IFF @tab    @tab X
 @tab Interchange File Format
-@item BFI @tab    @tab
+@item BFI @tab    @tab X
 @tab Brute Force & Ignorance, used in Flash Traffic: City of Angels
 @end multitable
 
